--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="settings">Settings</string>
     <string name="goals">Goals</string>
     <string name="graph">Graph</string>
+    <string name="button">Button</string>
+    <string name="weight">Weight</string>
 </resources>
